--- a/src/style.scss
+++ b/src/style.scss
@@ -366,6 +366,7 @@ body {
                     width: 100%;
 
                     .Cylinder {
+                       
                         height: 100%;
                         width: 100%;
                     }
@@ -375,52 +376,134 @@ body {
                     width: 100%;
                     padding-inline: 2rem;
 
-                    .cards{
+                    .cards {
 
-                    
-                    display: flex;
-                    flex-direction: column;
-                    gap: 2rem;
 
-                    .scard {
                         display: flex;
-                        align-items: self-start;
-                        gap: 0.5rem;
+                        flex-direction: column;
+                        gap: 2rem;
 
-                        .tick {
-                            border: 0.01rem solid var(--sec2);
+                        .scard {
+                            display: flex;
+                            align-items: self-start;
+                            gap: 0.5rem;
 
-                            padding-inline: clamp(0.2rem, 1vw, 0.6rem);
-                            font-weight: 100;
-                            display: inline-block;
-                            transform: translateY(8%);
-                            font-size: clamp(0.8rem, 5vw, 2rem);
-                            margin-right: 0.5rem;
-                            border-radius: 50rem;
+                            .tick {
+                                border: 0.01rem solid var(--sec2);
 
-                            i {
-                                display: inline-block;
-                                color: var(--sec2);
-                                transform: scale(1.8) translateY(-2%) translateX(10%);
-                            }
-                        }
-
-                        p {
-                            font-size: clamp(0.5rem, 2vw, 1rem);
-                            color: var(--sec2);
-                            line-height: clamp(1.4rem, 4vw, 3rem);
-
-
-                            .head {
-                                font-weight: 600;
+                                padding-inline: clamp(0.2rem, 1vw, 0.6rem);
+                                font-weight: 100;
                                 display: inline-block;
                                 transform: translateY(8%);
-                                font-size: clamp(0.8rem, 2vw, 3rem);
+                                font-size: clamp(0.8rem, 5vw, 2rem);
                                 margin-right: 0.5rem;
+                                border-radius: 50rem;
+
+                                i {
+                                    display: inline-block;
+                                    color: var(--sec2);
+                                    transform: scale(1.8) translateY(-2%) translateX(10%);
+                                }
+                            }
+
+                            p {
+                                font-size: clamp(0.5rem, 2vw, 1rem);
+                                color: var(--sec2);
+                                line-height: clamp(1.4rem, 4vw, 3rem);
+
+
+                                .head {
+                                    font-weight: 600;
+                                    display: inline-block;
+                                    transform: translateY(8%);
+                                    font-size: clamp(0.8rem, 2vw, 3rem);
+                                    margin-right: 0.5rem;
+                                }
                             }
                         }
                     }
                 }
+            }
+
+            .Project {
+                margin-top: 4rem;
+                width: 100%;
+                padding: 4rem;
+
+                .left {
+                    width: 100%;
+
+                    .project-cont {
+                        width: 100%;
+                        position: relative;
+
+                        .vid-top {
+                            right: 8%;
+                            top: 4%;
+                            padding: 0.2rem;
+                            background: var(--sec);
+                        }
+
+                        .vid-bottom {
+                            left: 5%;
+
+                            bottom: 0%;
+                            padding: 0.2rem;
+                            background: var(--sec);
+
+                            video {
+                                object-position: top;
+                            }
+                        }
+
+                        h2:last-child {
+                            position: relative;
+                            left: clamp(5.6rem, 44%, 58rem);
+                            @include h1;
+                            width: fit-content;
+                                   font-family: var(--bebo);
+
+                            font-size: clamp(2rem, 10vw, 15rem);
+                            white-space: nowrap;
+                        }
+
+                        h2:first-child {
+                            font-family: var(--bebo);
+
+                            font-size: clamp(2rem, 10vw, 15rem);
+                            white-space: nowrap;
+
+                        }
+
+
+
+                        .vid-top,
+                        .vid-bottom {
+                            width: 24vw;
+                            height: 24vw;
+                            position: absolute;
+
+                            video {
+                                width: 100%;
+                                object-fit: cover;
+                                height: 100%;
+                            }
+
+                        }
+
+                        .landscape {
+                            aspect-ratio: 16/9;
+                            height: 40%;
+                            width: 100%;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -539,7 +622,8 @@ body {
                             "third second"
 
                         ;
-                        .lower-content{
+
+                        .lower-content {
                             transform: translateY(-10%);
                         }
 
@@ -590,29 +674,30 @@ body {
                     .Strength {
                         margin: 0;
                         display: flex;
-                          width: 100%;
-                          gap: 2rem;
+                        width: 100%;
+                        gap: 2rem;
+
                         .second-lg {
                             width: 50%;
                             display: flex;
                             gap: 1rem;
-                            
-                            
-                            .imgCont:first-child{
+
+
+                            .imgCont:first-child {
                                 object-position: right;
                             }
-                        
-                            .imgCont{
+
+                            .imgCont {
                                 width: 50%;
                                 height: fit-content;
 
-                          &:nth-child(2){
-                           margin-top: 8rem;
-                          }
+                                &:nth-child(2) {
+                                    margin-top: 8rem;
+                                }
 
-                                img{
-                                     width: 100%;
-                                     aspect-ratio: 9/16;
+                                img {
+                                    width: 100%;
+                                    aspect-ratio: 9/16;
                                     object-fit: cover;
                                     object-position: center;
                                 }
@@ -626,6 +711,7 @@ body {
                             flex-direction: column;
                             gap: 4rem;
                             justify-content: space-around;
+
                             .first {
                                 h1 {
                                     font-family: var(--bebo);
@@ -635,20 +721,22 @@ body {
                                 }
 
                             }
-                            .cards{
 
-                            
-                            .scard{
-  
-                               .tick{
-                                font-size: clamp(0.8rem, 1vw, 2rem);
-                                 padding-inline: clamp(0.2rem, 0.5vw, 0.3rem);
-                               }
-                                 .head{
-                                    font-size: clamp(0.8rem, 1vw, 2rem);
-                                 }
-                            } 
-                        }
+                            .cards {
+
+
+                                .scard {
+
+                                    .tick {
+                                        font-size: clamp(0.8rem, 1vw, 2rem);
+                                        padding-inline: clamp(0.2rem, 0.5vw, 0.3rem);
+                                    }
+
+                                    .head {
+                                        font-size: clamp(0.8rem, 1vw, 2rem);
+                                    }
+                                }
+                            }
                         }
                     }
                 }
