--- a/src/style.scss
+++ b/src/style.scss
@@ -635,11 +635,59 @@ body {
                                     transform: translateY(8%);
                                     font-size: clamp(0.8rem, 2vw, 2rem);
                                     white-space: nowrap;
-                                    margin-right: 0.5rem;
+                                    margin-right: 1rem;
                                 }
                             }
                     }
                     }
+                }
+            }
+
+            .work{
+                width: 100%;
+                padding: 4rem;
+                .left{
+                  width: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  gap: 3rem;
+                  .head{
+                    h2{
+                        @include h1;
+                         font-size: clamp(3rem, 20vw, 20rem);
+                         width: fit-content;
+                        position: relative;
+                        line-height: clamp(3rem,17vw,18rem);
+                         span{
+                            font-family: Curvy;
+                            font-weight: 100;
+                            position: absolute;
+                            transform: translateX(20%);
+                            font-size: clamp(3rem, 10vw, 18rem);
+                         }
+                    }
+                  }
+                  .socials{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+                    .handle{
+                        display: flex;
+                        align-items: center;
+                        gap: 1rem;
+                        span{
+
+                            font-size: clamp(1rem,2vw,4rem);
+                            display: flex;
+                            align-items: center;
+
+                            svg{
+                                width: clamp(1rem,2vw,4rem);
+                                height: clamp(1rem,2vw,4rem);
+                            }
+                        }
+                    }
+                  }
                 }
             }
         }
@@ -947,6 +995,11 @@ body {
                                 justify-content: space-around;
                                 margin-right: 2rem;
                             }
+                        }
+                    }
+                    .work{
+                        .left{
+                            width: 50%;
                         }
                     }
                 }
