--- a/src/style.scss
+++ b/src/style.scss
@@ -539,7 +539,7 @@ body {
             }
 
             .Services {
-
+                border-bottom: 0.2rem solid var(--sec);
                 width: 100%;
 
                 .top {
@@ -646,6 +646,7 @@ body {
             .work{
                 width: 100%;
                 padding: 4rem;
+                overflow-x: hidden;
                 .left{
                   width: 100%;
                   display: flex;
@@ -688,6 +689,14 @@ body {
                         }
                     }
                   }
+                }
+                .right{
+                    width: 100vw;
+                  
+                  
+                    div{
+                        transform: translateX(-18%);
+                    }
                 }
             }
         }
@@ -975,8 +984,8 @@ body {
                                  transform: translateY(-2px);
                                  position: relative;
                                  z-index: 3;
-                                height: 30vw;
-                                width: 30vw;
+                                height: clamp(4rem,30vw,30rem);
+                                width: clamp(4rem,30vw,30rem);
                             }
                         }
                         .bottom{
@@ -998,8 +1007,19 @@ body {
                         }
                     }
                     .work{
+                        overflow-x: hidden;
+                        display: flex;
                         .left{
                             width: 50%;
+                           
+                        }
+                        .right{
+                            flex-shrink: 0;
+                           
+                            width: 65%;
+                            div{
+                                transform: translateX(0%) translateY(-10%) ;
+                            }
                         }
                     }
                 }
