--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ html #root .Main .Home-Cont .Home .left,
 body #root .Main .Home-Cont .Home .left {
   height: 50%;
   width: 100%;
-  background: url("./images/14.jpeg");
+  background: url("/images/14.jpeg");
   background-size: cover;
   background-position: center;
   border-bottom: 0.5rem solid var(--sec);
