--- a/src/style.scss
+++ b/src/style.scss
@@ -101,6 +101,7 @@ body {
             .Home-Cont {
                 height: fit-content;
                 border-bottom: 0.2rem solid var(--sec);
+                min-height: 100vh;
 
                 .Home {
                     height: 100vh;
