--- a/src/style.scss
+++ b/src/style.scss
@@ -8,7 +8,7 @@
     --pri2: black;
     --sec: white;
     --sec2: rgb(170, 163, 163);
-    --bebo:"Bebas Neue", sans-serif;
+    --bebo: "Bebas Neue", sans-serif;
 }
 
 
@@ -17,9 +17,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
+
     font-family: "Poppins", sans-serif;
-    
+
     color: white;
 }
 
@@ -32,7 +32,7 @@
 
 html,
 body {
-       
+
     width: 100%;
 
 
@@ -76,13 +76,14 @@ body {
                 .milestone {
                     display: none;
                     justify-content: center;
-                    font-weight: 100 ;
+                    font-weight: 100;
                     align-items: center;
                     gap: 2rem;
-                
-                    span{
-                        font-weight: 100 ;
+
+                    span {
+                        font-weight: 100;
                     }
+
                     .m-Line {
                         height: 0.1rem;
                         width: 3rem;
@@ -113,10 +114,10 @@ body {
 
                     .left {
                         height: 50%;
-                        width: 100%; 
+                        width: 100%;
                         border-bottom: 0.5rem solid var(--sec);
 
-                        img{
+                        img {
                             height: 100%;
                             width: 100%;
                             object-position: center;
@@ -604,7 +605,7 @@ body {
                     gap: 3rem;
                     align-items: center;
                     border-bottom: 0.1rem solid var(--sec2);
-                
+
 
                     .vidB {
 
@@ -620,21 +621,24 @@ body {
                             object-position: center;
                         }
                     }
-                    .serv-list{
-                    width: 100%;
-                     display: flex;
-                     flex-direction: column;
-                     align-items: center;
-                     gap: 2rem;
-                    .serv{
-                        width: 50%;
-                       p {
+
+                    .serv-list {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        gap: 2rem;
+
+                        .serv {
+                            width: 50%;
+
+                            p {
                                 font-size: clamp(0.5rem, 2vw, 1rem);
                                 color: var(--sec2);
                                 line-height: clamp(1.3rem, 2.2vw, 3rem);
 
 
-                            span {
+                                span {
                                     font-weight: 600;
                                     display: inline-block;
                                     transform: translateY(8%);
@@ -643,64 +647,74 @@ body {
                                     margin-right: 1rem;
                                 }
                             }
-                    }
+                        }
                     }
                 }
             }
 
-            .work{
+            .work {
                 width: 100%;
                 padding: 4rem;
                 overflow-x: hidden;
-                .left{
-                  width: 100%;
-                  display: flex;
-                  flex-direction: column;
-                  gap: 3rem;
-                  .head{
-                    h2{
-                        @include h1;
-                         font-size: clamp(3rem, 20vw, 20rem);
-                         width: fit-content;
-                        position: relative;
-                        line-height: clamp(3rem,17vw,18rem);
-                         span{
-                            font-family: Curvy;
-                            font-weight: 100;
-                            position: absolute;
-                            transform: translateX(20%);
-                            font-size: clamp(3rem, 10vw, 18rem);
-                         }
-                    }
-                  }
-                  .socials{
+
+                .left {
+                    width: 100%;
                     display: flex;
                     flex-direction: column;
-                    gap: 1rem;
-                    .handle{
-                        display: flex;
-                        align-items: center;
-                        gap: 1rem;
-                        span{
+                    gap: 3rem;
 
-                            font-size: clamp(1rem,2vw,4rem);
-                            display: flex;
-                            align-items: center;
+                    .head {
+                        h2 {
+                            @include h1;
+                            font-size: clamp(3rem, 20vw, 20rem);
+                            width: fit-content;
+                            position: relative;
+                            line-height: clamp(3rem, 17vw, 18rem);
 
-                            svg{
-                                width: clamp(1rem,2vw,4rem);
-                                height: clamp(1rem,2vw,4rem);
+                            span {
+                                font-family: Curvy;
+                                font-weight: 100;
+                                position: absolute;
+                                transform: translateX(20%);
+                                font-size: clamp(3rem, 10vw, 18rem);
                             }
                         }
                     }
-                  }
+
+                    .socials {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+
+                        .handle {
+                            display: flex;
+                            align-items: center;
+                            gap: 1rem;
+
+                            span {
+
+                                font-size: clamp(1rem, 2vw, 4rem);
+                                display: flex;
+                                align-items: center;
+
+                                svg {
+                                    width: clamp(1rem, 2vw, 4rem);
+                                    height: clamp(1rem, 2vw, 4rem);
+                                }
+                            }
+                        }
+                    }
                 }
-                .right{
-                    width: clamp(50rem,100vw,100rem);
-                  
-                  
-                    div{
-                        transform: translateX(-32%);
+
+                .right {
+                    width: clamp(50rem, 100vw, 100rem);
+                    height: 100vh; // REQUIRED
+                    min-height: 600px;
+
+                    .splineWrap {
+                        height: 100%;
+                        width: 100%;
+                        transform: translateX(-34%);
                     }
                 }
             }
@@ -977,53 +991,61 @@ body {
                             }
                         }
                     }
-                    .Services{
+
+                    .Services {
                         display: flex;
                         flex-direction: column-reverse;
-                       
-                        .top{
+
+                        .top {
                             flex-direction: row;
-                             justify-content: center;
-                    
-                            .vidT{
-                                 transform: translateY(-2px);
-                                 position: relative;
-                                 z-index: 3;
-                                height: clamp(4rem,30vw,30rem);
-                                width: clamp(4rem,30vw,30rem);
+                            justify-content: center;
+
+                            .vidT {
+                                transform: translateY(-2px);
+                                position: relative;
+                                z-index: 3;
+                                height: clamp(4rem, 30vw, 30rem);
+                                width: clamp(4rem, 30vw, 30rem);
                             }
                         }
-                        .bottom{
+
+                        .bottom {
                             flex-direction: row;
                             justify-content: space-evenly;
                             padding-bottom: 0.001rem;
-                            .vidB{
+
+                            .vidB {
                                 height: 30vw;
                                 width: 30vw;
-                               
+
                             }
-                            .serv-list{
+
+                            .serv-list {
                                 width: 60%;
                                 flex-direction: row;
-                                align-items: self-start; 
+                                align-items: self-start;
                                 justify-content: space-around;
                                 margin-right: 2rem;
                             }
                         }
                     }
-                    .work{
+
+                    .work {
                         overflow-x: hidden;
                         display: flex;
-                        .left{
+
+                        .left {
                             width: 50%;
-                           
+
                         }
-                        .right{
+
+                        .right {
                             flex-shrink: 0;
-                           
+
                             width: 65%;
-                            div{
-                                transform: translateX(0%) translateY(-10%) ;
+
+                            .splineWrap {
+                                transform: translateX(0%) translateY(-10%);
                             }
                         }
                     }
