--- a/src/style.scss
+++ b/src/style.scss
@@ -790,7 +790,7 @@ body {
 
                         .Home {
                             flex-direction: row;
-
+                            min-height: 100vh;
                             .left {
                                 width: 50%;
                                 height: 100%;
@@ -1041,7 +1041,7 @@ body {
 
                         .right {
                             flex-shrink: 0;
-
+                            height: 100vh;
                             width: 65%;
 
                             .splineWrap {
