--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,7 @@ body #root .Main .Home-Cont .Home .left {
   height: 50%;
   width: 100%;
   border-bottom: 0.5rem solid var(--sec);
+  overflow: hidden;
 }
 html #root .Main .Home-Cont .Home .left img,
 body #root .Main .Home-Cont .Home .left img {
@@ -157,6 +158,7 @@ body #root .Main .Home-Cont .Home .right .center {
 }
 html #root .Main .Home-Cont .Home .right .center p,
 body #root .Main .Home-Cont .Home .right .center p {
+  opacity: 0;
   color: var(--sec2);
   font-size: clamp(0.6rem, 2vw, 2rem);
 }
@@ -592,7 +594,7 @@ html #root .Main .Services .bottom,
 body #root .Main .Services .bottom {
   width: 100%;
   display: flex;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
   margin-top: 2rem;
   flex-direction: column-reverse;
   gap: 3rem;
@@ -827,6 +829,7 @@ body #root .Main .work .right .splineWrap {
     width: 50%;
     height: -moz-fit-content;
     height: fit-content;
+    overflow: hidden;
   }
   html body #root .Main .Strength .second-lg .imgCont:nth-child(2) {
     margin-top: 8rem;
@@ -891,10 +894,12 @@ body #root .Main .work .right .splineWrap {
   html body #root .Main .Services {
     display: flex;
     flex-direction: column-reverse;
+    padding-bottom: 1rem;
   }
   html body #root .Main .Services .top {
     flex-direction: row;
     justify-content: center;
+    border: 0rem solid var(--sec2);
   }
   html body #root .Main .Services .top .vidT {
     transform: translateY(-2px);
@@ -907,6 +912,7 @@ body #root .Main .work .right .splineWrap {
     flex-direction: row;
     justify-content: space-evenly;
     padding-bottom: 0.001rem;
+    border: 0.1rem solid var(--sec2);
   }
   html body #root .Main .Services .bottom .vidB {
     height: clamp(4rem, 30vw, 30rem);
