--- a/src/style.scss
+++ b/src/style.scss
@@ -105,6 +105,7 @@ body {
               
 
                 .Home {
+                   
                     height: 100vh;
                     max-height: 1000px;
                     width: 100%;
@@ -116,7 +117,7 @@ body {
                         height: 50%;
                         width: 100%;
                         border-bottom: 0.5rem solid var(--sec);
-
+                         overflow: hidden;
                         img {
                             height: 100%;
                             width: 100%;
@@ -163,6 +164,7 @@ body {
                             padding-top: 1rem;
 
                             p {
+                                opacity: 0;
                                 color: var(--sec2);
                                 font-size: clamp(0.6rem, 2vw, 2rem);
                             }
@@ -599,7 +601,7 @@ body {
                 .bottom {
                     width: 100%;
                     display: flex;
-                    padding-bottom: 1rem;
+                    padding-bottom: 3rem;
                     margin-top: 2rem;
                     flex-direction: column-reverse;
                     gap: 3rem;
@@ -902,6 +904,7 @@ body {
                             .imgCont {
                                 width: 50%;
                                 height: fit-content;
+                                overflow: hidden;
 
                                 &:nth-child(2) {
                                     margin-top: 8rem;
@@ -995,10 +998,12 @@ body {
                     .Services {
                         display: flex;
                         flex-direction: column-reverse;
+                        padding-bottom: 1rem;
 
                         .top {
                             flex-direction: row;
                             justify-content: center;
+                            border: 0rem solid var(--sec2);
 
                             .vidT {
                                 transform: translateY(-2px);
@@ -1013,7 +1018,7 @@ body {
                             flex-direction: row;
                             justify-content: space-evenly;
                             padding-bottom: 0.001rem;
-
+                            border: 0.1rem solid var(--sec2);
                             .vidB {
                              height: clamp(4rem, 30vw, 30rem);
                                 width: clamp(4rem, 30vw, 30rem);
@@ -1033,7 +1038,7 @@ body {
                     .work {
                         overflow-x: hidden;
                         display: flex;
-
+ 
                         .left {
                             width: 50%;
 
